tests/fixtures/errors/postprocess/variants/reject-promise/postprocess.js
module.exports = async () => {
  throw "rejected!";
};
